<package>
  <name>sr_ethercat</name>
  <version>0.0.1</version>
  <description>Main loop that runs shadow hardwarethe robot.</description>
  <maintainer email="manos@shadowrobot.com">Manos Nikolaidis</maintainer>

  <license>BSD</license>

  <url type="website">http://www.shadowrobot.com/</url>

  <author email="manos@shadowrobot.com">Manos Nikolaidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ethercat_hardware</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_mechanism_diagnostics</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  

  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ethercat_hardware</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pr2_mechanism_diagnostics</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
</package>
