<package>
  <name>ros_ethercat_hardware_interface</name>
  <version>0.1.0</version>
  <description>EtherCAT hardware interface</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://www.shadowrobot.com/</url>

  <author email="software@shadowrobot.com">Manos Nikolaidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
