<?xml version="1.0"?>
<!--
 Software License Agreement (BSD License)
 Copyright © 2022 belongs to Shadow Robot Company Ltd.
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
   1. Redistributions of source code must retain the above copyright notice,
      this list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
   3. Neither the name of Shadow Robot Company Ltd nor the names of its contributors
      may be used to endorse or promote products derived from this software without
      specific prior written permission.
 This software is provided by Shadow Robot Company Ltd "as is" and any express
 or implied warranties, including, but not limited to, the implied warranties of
 merchantability and fitness for a particular purpose are disclaimed. In no event
 shall the copyright holder be liable for any direct, indirect, incidental, special,
 exemplary, or consequential damages (including, but not limited to, procurement of
 substitute goods or services; loss of use, data, or profits; or business interruption)
 however caused and on any theory of liability, whether in contract, strict liability,
 or tort (including negligence or otherwise) arising in any way out of the use of this
 software, even if advised of the possibility of such damage.
-->

<package>
  <name>ros_ethercat_loop</name>
  <version>0.3.1</version>
  <description>Main loop to run EtherCAT robot hardware.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://www.shadowrobot.com/</url>

  <author email="software@shadowrobot.com">Manos Nikolaidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros_ethercat_hardware</build_depend>
  <build_depend>ros_ethercat_model</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rosconsole_bridge</run_depend>
  <run_depend>ethercat_grant</run_depend>
</package>
