<package>
  <name>ros_ethercat_mechanism_model</name>
  <version>0.1.0</version>
  <description>The mechanism model</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://www.shadowrobot.com/</url>

  <author email="software@shadowrobot.com">Manos Nikolaidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ros_ethercat_hardware</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>

</package>
